# piggy-bank-bg

./: README.md  download_model.py  generate_assets.py  pyproject.toml  run.sh  setup_vcam.sh
bgnd/: __main__.py  animation.py  app.py  assets.py  capture.py  compositor.py  easing.py  segmenter.py  text_renderer.py  virtual_camera.py
bgnd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: bgnd-project.md
